// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlbumItem > matches the snapshot 1`] = `
"<article>
  <div class="albumImageWrapper">
    <figure class="mBS"><a title="Go to album name">
        <div class="centerAll preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Go to album name" style="display: none;"></div>
      </a></figure><button class="centerItems buttonLink themeHoverButton buttonLink themeHoverButton buttonLink" type="button" title="Play album name">
      <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album name</span>
    </button>
  </div>
  <p class="mBXS strong smallFont clamp2"><a class="link" aria-label="Go to album name">name</a></p>
  <ul class="commaList smallFont clamp2">
    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
  </ul>
</article>"
`;

exports[`AlbumItem > when album artist is an empty array > matches the snapshot 1`] = `
"<article>
  <div class="albumImageWrapper">
    <figure class="mBS"><a title="Go to album name">
        <div class="centerAll preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Go to album name" style="display: none;"></div>
      </a></figure><button class="centerItems buttonLink themeHoverButton buttonLink themeHoverButton buttonLink" type="button" title="Play album name">
      <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album name</span>
    </button>
  </div>
  <p class="mBXS strong smallFont clamp2"><a class="link" aria-label="Go to album name">name</a></p>
  <!--v-if-->
</article>"
`;
